Footer fixes, cropping fixes

--- a/public/css/404.css
+++ b/public/css/404.css
@@ -60,6 +60,6 @@ body {
 /* SPECIAL FOOTER FORMATTING! */
 footer {
     position: absolute;
-    width: 100%;
+    width: 80vw; /* due to padding */
     bottom: 0;
 }
